add recommended extensions to migration target